[package]
name = "pne-gateway"
version = "1.0.0"
edition = "2021"
authors = ["Neural Exchequer <agents@n-exchequer.io>"]
description = "PNE x402 Sovereign Intent Auction Gateway"

[[bin]]
name = "pne-gateway"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
dashmap = "5"
tokio-tungstenite = "0.21"
futures-util = "0.3"
rand = "0.8"
dotenvy = "0.15"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
bytes = "1"
rmp-serde = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
