[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pne-client"
version = "1.0.0"
description = "Python SDK for the PNE Sovereign Intent Auction — automatic L402 payment handling with intelligent bidding strategies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["x402", "L402", "lightning", "xrpl", "rlusd", "usdc", "solana", "auction", "ai-agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.27.0",
    "xrpl-py>=2.6.0",
]

[project.optional-dependencies]
base     = ["web3>=6.0.0"]                          # USDC on Base L2
solana   = ["solana>=0.34.0", "solders>=0.21.0", "base58>=2.1.0"]  # SOL
lightning = ["lnd-grpc-client>=0.6.0"]              # BTC Lightning
all      = ["web3>=6.0.0", "solana>=0.34.0", "solders>=0.21.0", "base58>=2.1.0"]
dev      = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage = "https://n-exchequer.io"
Repository = "https://github.com/SqueezeOS/pne"

[tool.setuptools.packages.find]
where = ["."]
include = ["pne_client*"]
